--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,12 +1,15 @@
 name: Unit test
-on: workflow_dispatch
+on: 
+  push:
+    branches: [main]
 jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
       - name: Installing dependencies
-        run: |
-          cd rankingsRepoExcel/
-          npm install
+        run: npm install
       - name: Starting unit test
         run: npm run test
